--- a/frontend/src/app/views/book/book.component.html
+++ b/frontend/src/app/views/book/book.component.html
@@ -117,6 +117,19 @@
             <label for="isbn">Publisher</label>
             <input type="text" ngModel name="isbn" class="form-control" id="isbn" placeholder="isbn" required>
           </div>
+<!--          <div>-->
+<!--            <mat-form-field appearance="fill">-->
+<!--              <mat-label>Authors</mat-label>-->
+<!--              <mat-select [formControl]="toppings" multiple>-->
+<!--                <mat-select-trigger>-->
+<!--                  {{authors.values() ? toppings.value[0] : ''}}-->
+<!--                  <span *ngIf="authors.values()> 1" class="example-additional-selection">-->
+<!--                    (+{{}}-->
+<!--                  </span>-->
+<!--                </mat-select-trigger>-->
+<!--              </mat-select>-->
+<!--            </mat-form-field>-->
+<!--          </div>-->
           <div class="form-group">
             <label>Authors</label>
             <select multiple class="form-control" ngModel name="authors">
@@ -154,7 +167,7 @@
           <input type="hidden" ngModel="{{editBook?.id}}" name="id" class="form-control" id="id">
           <div class="form-group">
             <label for="yearOfPublisher">Year of publisher</label>
-            <input type="text" ngModel="{{editBook?.yearPublisher}}" name="yearOfPublisher" class="form-control"
+            <input type="text" ngModel="{{editBook?.yearPublisher}}" name="yearPublisher" class="form-control"
                    id="bookYearPublisher"
                    placeholder="year of publisher">
           </div>
@@ -271,9 +284,9 @@
         <div>Publisher: {{detailBook?.publisher}}</div>
         <div>Year of publisher: {{detailBook?.yearPublisher}}</div>
         <div>Rating: {{detailBook?.rating}}</div>
-        <div>Authors:<a  *ngFor="let author of detailBook?.authors">
-            {{author.firstName}}
-            {{author.secondName}},
+        <div>Authors:<a *ngFor="let author of detailBook?.authors">
+          {{author.firstName}}
+          {{author.secondName}},
         </a>
         </div>
       </div>
