--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -5,7 +5,7 @@
     <nav class="navbar navbar-expand-lg navbar-transparent navbar-absolute fixed-top ">
       <div class="container-fluid justify-content-center">
         <div class="navbar-wrapper">
-          <a class="navbar-brand" href="/">Main</a>
+          <a class="navbar-brand" routerLink="main">Main</a>
           <em class="material-icons">home</em>
         </div>
         <button aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation"
