--- a/frontend/src/app/views/book-page/book-page.component.html
+++ b/frontend/src/app/views/book-page/book-page.component.html
@@ -1,4 +1,222 @@
+<div class="page-heading" id="main-container" style="min-width: 800px; overflow-x: auto">
+  <section class="section">
+    <div class="card">
+      <div class="card-header">
+        <h1 style="margin-bottom: 0">{{book.name}}</h1>
+      </div>
+      <div class="card-body">
+        <div class="dataTable-wrapper dataTable-loading no-footer sortable searchable fixed-columns">
+          <div class="dataTable-top row">
+            <h2>
+              <div class="rating-line"><label style="margin-right: 10px; margin-bottom: 0">Rating:</label>
+                <div class="step" class="star-rating" title="{{book.rating}}/5">
+                  <div class="star-value" [ngStyle]="{'width': (book.rating * 100 / 5)+ '%' } "></div>
+                </div>
+              </div>
+            </h2>
+            <div class="row" style="width: 100%">
+              <div class="col-6">
+                <h2>Authors:
+                  <div
+                    *ngFor="let author of book.authors">{{ author.firstName}} {{author.secondName}},
+                  </div>
+                </h2>
+              </div>
+              <div class="col-6">
+                <div><h2>Publisher: {{book.publisher}}</h2></div>
+                <div><h2>Year: {{book.yearPublisher}}</h2></div>
+                <div><h2>ISBN: {{(book.isbn).toString().substring(0, 3)}}-{{(book.isbn).toString().substring(3, 4)}}
+                  -{{(book.isbn).toString().substring(4, 8)}}-{{(book.isbn).toString().substring(8, 12)}}
+                  -{{(book.isbn).toString().substring(12, 13)}}</h2></div>
+              </div>
+            </div>
+            <div class="col-6" style="margin-bottom: 10px">
+              <button class="btn btn-outline-primary" [routerLink]="['/books']">TO BOOKS
+              </button>
+            </div>
+            <div class="col-6 text-end" style="margin-bottom: 10px">
+              <!--              <button class="btn btn-outline-primary" data-toggle="collapse" href="#createReviewModal"-->
+              <!--                      style="width: 120px">ADD REVIEW-->
+              <!--              </button>-->
+              <button class="btn btn-outline-primary" data-toggle="modal" data-target="#createReviewModal"
+                      style="width: 120px">ADD REVIEW
+              </button>
+            </div>
+          </div>
+          <div class="dataTable-container">
+            <!--            <div class="collapse" id="collapseExample">-->
+            <!--              <div class="card card-body">-->
+            <!--                <form #createReviewForm="ngForm" (ngSubmit)="createReview(createReviewForm)">-->
+            <!--                  <div id="filter-forms" class="row-12">-->
+            <!--                    <div class="row" style="margin-bottom: 5px">-->
+            <!--                      <div class="col-md-9" style="display: flex;align-items: center">-->
+            <!--                        <label style="margin-left:0">Commenter name:</label>-->
+            <!--                        <input class="form-control" type="text" ngModel name="commenterName"-->
+            <!--                               style="width: 150px; height: 31px">-->
+            <!--                        <label style="margin-left:10px">Rating :</label>-->
+            <!--                        <select class="dataTable-selector form-select" ngModel name="rating" style="width: auto;height: 31px">-->
+            <!--                          <option>0</option>-->
+            <!--                          <option>1</option>-->
+            <!--                          <option>2</option>-->
+            <!--                          <option>3</option>-->
+            <!--                          <option>4</option>-->
+            <!--                          <option>5</option>-->
+            <!--                        </select>-->
+            <!--                        <label style="margin-left:10px">Comment:</label>-->
+            <!--                        <textarea class="form-control" type="text" ngModel name="comment"-->
+            <!--                                  style="height: 31px"></textarea>-->
 
-<h1>{{bookId}}</h1>
-<h1>{{book.name}}</h1>
-<h1>{{book.authors}}</h1>
+            <!--                      </div>-->
+            <!--                      <div class="col-md-3   text-end">-->
+            <!--                        <button [disabled]="createReviewForm.untouched || createReviewForm.pristine" type="submit"-->
+            <!--                                class="btn btn-outline-primary"-->
+            <!--                                style="width: 90px;margin: 5px">SAVE-->
+            <!--                        </button>-->
+            <!--                        <button type="button" (click)="createReviewForm.resetForm()" class="btn btn-outline-dark"-->
+            <!--                                style="width: 90px;margin: 5px">RESET-->
+            <!--                        </button>-->
+            <!--                      </div>-->
+            <!--                    </div>-->
+            <!--                    <div class="row" style="margin-top: 5px">-->
+            <!--                      <div class="col-md-2 text-end">-->
+            <!--                      </div>-->
+            <!--                    </div>-->
+            <!--                  </div>-->
+            <!--                </form>-->
+            <!--              </div>-->
+            <!--            </div>-->
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+</div>
+<!--<div class="modal fade" id="createReviewModal" tabindex="-1" role="dialog" aria-labelledby="createReviewModal"-->
+<!--     aria-hidden="true">-->
+<!--  <div class="modal-dialog" role="document">-->
+<!--    <div class="modal-content">-->
+<!--      <div class="modal-header">-->
+<!--        <H2 class="modal-title">Create Review</H2>-->
+<!--        <button class="close" data-dismiss="modal">X</button>-->
+<!--      </div>-->
+<!--      <div class="modal-body">-->
+<!--        <form #reviewForm="ngForm" (ngSubmit)="createReview(reviewForm)" >-->
+<!--          <div class="form-group">-->
+<!--            <label for="commenterName">Commenter name</label>-->
+<!--            <input type="text" ngModel name="commenterName" class="form-control" id="commenterName" placeholder="name"-->
+<!--                   minlength="1" maxlength="256" required>-->
+<!--          </div>-->
+<!--          <div class="form-group">-->
+<!--            <div style="display: flex; align-items: center">-->
+<!--              <label for="rating" style="margin-bottom: 0">Rating: </label>-->
+<!--              <ul class="list-inline rating-list"-->
+<!--                  *ngFor="let star of [1,2,3,4,5]" style="display: inline-block">-->
+
+<!--                <li (click)="countStar(star)"-->
+<!--                    [ngClass]="{'selected': (star <= selectedValue)}">-->
+<!--                  <i class="fa fa-star"></i>-->
+<!--                </li>-->
+<!--              </ul>-->
+<!--            </div>-->
+<!--            <input id="rating" hidden type="number" ngModel="{{selectedValue}}" name="rating" class="form-control"-->
+<!--                   placeholder="rating"-->
+<!--                   min="1" max="5" required>-->
+<!--          </div>-->
+<!--          <div class="form-group">-->
+<!--            <label for="comment">Comment</label>-->
+<!--            <textarea type="text" ngModel name="comment" class="form-control" id="comment" placeholder="comment"-->
+<!--                      minlength="1" required></textarea>-->
+<!--          </div>-->
+<!--          <div class="form-group">-->
+<!--            <input hidden type="text" [ngModel]="book" name="book" class="form-control" value="{{book}}">-->
+<!--          </div>-->
+<!--          <div class="modal-footer">-->
+<!--            <button [disabled]="reviewForm.invalid" type="submit" class="btn btn-success">Save</button>-->
+<!--            <button type="button" id="add-review-form" class="btn btn-danger" data-dismiss="modal">Close</button>-->
+<!--          </div>-->
+<!--        </form>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--</div>-->
+<div class="modal fade text-left" id="createReviewModal" data-backdrop="static" tabindex="-1" role="dialog"
+     aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        Create author
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="reviewForm.resetForm()">X
+        </button>
+      </div>
+      <div class="modal-body">
+        <form #reviewForm="ngForm" (ngSubmit)="createReview(reviewForm)" class="form form-vertical">
+          <div class="form-body">
+            <div class="row">
+              <div class="col-12">
+                <div class="form-group">
+                  <div style="display: flex; align-items: center">
+                    <label for="rating" style="margin-bottom: 0">Rating* </label>
+                    <ul class="list-inline rating-list"
+                        *ngFor="let star of [1,2,3,4,5]" style="display: inline-block">
+
+                      <li (click)="countStar(star)"
+                          [ngClass]="{'selected': (star <= selectedValue)}">
+                        <i class="fa fa-star fa-2x"></i>
+                      </li>
+                    </ul>
+                  </div>
+                  <input id="rating" hidden type="number" ngModel="{{selectedValue}}" #reviewRating="ngModel"
+                         name="rating" class="form-control"
+                         placeholder="rating" min="1" max="5" required>
+                  <div *ngIf="reviewRating.invalid && (reviewRating.dirty || reviewRating.touched)"
+                       class="alert alert-danger" style="padding: 5px">
+                    <div *ngIf="reviewRating.errors?.required || reviewRating.errors?.pattern">
+                      Select rating.
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="form-group">
+                <label for="commenterName">Commenter Name*</label>
+                <input type="text" id="commenterName" class="form-control" ngModel name="commenterName"
+                       #commenterName="ngModel" placeholder="Commenter name" minlength="1" maxlength="128"
+                       pattern="((?:\s*[A-Za-z0-9_]\s*){1,128})$" required>
+                <div *ngIf="commenterName.invalid && (commenterName.dirty || commenterName.touched)"
+                     class="alert alert-danger" style="padding: 5px">
+                  <div *ngIf="commenterName.errors?.required || commenterName.errors?.pattern">
+                    Wrong commenterName.
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="form-group">
+                <label for="comment">Comment* </label>
+                <textarea type="text" id="comment" class="form-control" ngModel name="comment"
+                          #reviewComment="ngModel" placeholder="Comment" minlength="1" required></textarea>
+                <div *ngIf="reviewComment.invalid && (reviewComment.dirty || reviewComment.touched)"
+                     class="alert alert-danger" style="padding: 5px">
+                  <div *ngIf="reviewComment.errors?.required || reviewComment.errors?.pattern">
+                    Wrong comment.
+                  </div>
+                </div>
+              </div>
+              <div class="form-group">
+                <input hidden type="text" [ngModel]="book" name="book" class="form-control" value="{{book}}">
+              </div>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="submit" class="btn btn-outline-success" style="width: 80px">Save</button>
+            <button type="button" id="close-review-form" class="btn btn-outline-dark" data-dismiss="modal"
+                    (click)="reviewForm.resetForm();countStar(0);" style="width: 80px">Close
+            </button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+
